--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,18 +9,18 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
+    <title>Portfolio Page</title>
   </head>
 
   <body>
-    <h1>Hello App Engine!</h1>
+    <h1>Portfolio Page</h1>
 	
     <table>
       <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
+        <td colspan="2" style="font-weight:bold;">Example:</td>        
       </tr>
       <tr>
-        <td><a href="home">Scala Servlet</a></td>
+        <td><a href="home">Proof of Concept -- Click Here</a></td>
       </tr>
     </table>
   </body>
